--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.3",
     "core-js": "^3.8.3",
+    "primeflex": "^3.3.1",
     "primevue": "^4.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
