--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.3",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "core-js": "^3.8.3",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
